--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <div id="weatherInfo" class="mt-4"></div>
     </div>
 
-    <script src="./output.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
